--- a/_pages/videos.html
+++ b/_pages/videos.html
@@ -9,17 +9,64 @@ author_profile: true
 
 <p>A video series in French about my day-to-day findings as a Ph.D candidate.</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLkFqOjXtmtV6HS6j_6dTOLIEk5SIJXjWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/videoseries?list=PLkFqOjXtmtV6HS6j_6dTOLIEk5SIJXjWs"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+></iframe>
 
 <p>You can <a href="http://www.youtube.com/channel/UCSqenVYtGVLVjAH9rw6dXeg?sub_confirmation=1">subscribe</a> to be notified of my upcoming videos!</p>
 
 <h2>My talks</h2>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mlmQK5lK1HA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3>Presenting my paper (virtually) at ECML-PKDD 2021</h3>
+<iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/mlmQK5lK1HA"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+></iframe>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/H7wYT0Ibpzw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3>Meta-Learning applied on real life few-shot computer vision tasks (Presentation at the Paris Computer Vision Meetup - French)</h3>
+<iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/H7wYT0Ibpzw"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+></iframe>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/58Dh6aoUJ_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/-RyAwmKslFk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3>Putting AGI back where it belongs (French)</h3>
+
+<iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/58Dh6aoUJ_8"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+></iframe>
+
+
+<h3>Learning to communicate in Multi-Agent RL (Formation at Sicara - French)</h3>
+
+<iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/-RyAwmKslFk"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+></iframe>
 
