I defended my thesis

--- a/_pages/videos.html
+++ b/_pages/videos.html
@@ -5,6 +5,17 @@ permalink: /videos/
 author_profile: true
 ---
 
+<h2>Ph.D. defense: Challenges of Real-Life Few-Shot Image Classification</h2>
+
+<iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/TC3AyeStBXs?si=O5ihA-miHTkv2kgz"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+></iframe>
+
 <h2>PhD: la Petite Histoire De ma thèse</h2>
 
 <p>A video series in French about my day-to-day findings as a Ph.D candidate.</p>
